--- a/apps/ng-blog/src/app/app.component.html
+++ b/apps/ng-blog/src/app/app.component.html
@@ -1,7 +1,5 @@
 <h1>Todos</h1>
 
-<ul>
-  <li class="todo" *ngFor="let t of todos">{{ t.title }}</li>
-</ul>
+<myorg-todos [todos]="todos"></myorg-todos>
 
 <button id="add-todo" (click)="addTodo()">Add Todo</button>
