1. Created Shell, Navbar, Footer components in UI module. 2. Used these components in AppComponent. 3. Added bootstrap library to project.

--- a/apps/ng-blog/src/app/app.component.html
+++ b/apps/ng-blog/src/app/app.component.html
@@ -1,5 +1,3 @@
-<h1>Todos</h1>
-
-<myorg-todos [todos]="todos"></myorg-todos>
-
-<button id="add-todo" (click)="addTodo()">Add Todo</button>
+<myorg-shell>
+  <myorg-article-list></myorg-article-list>
+</myorg-shell>
